Добавление задачи с методами без перезагрузки, Кнопка Обновление без смены выбранного сотрудника

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           </div>
           <div class="col col-md-auto d-flex justify-content-end order-md-3">
             <button
-              class="btn btn-falcon-success btn-sm m-1"
+              class="btn btn-falcon-success btn-sm m-1 refreshBtn"
               type="button"
               data-event="refresh"
             >
               <i class="bi bi-arrow-clockwise"></i
-              ><span class="mobile-hide-text">Обновить</span>
+              ><span class="mobile-hide-text"></span>
             </button>
           </div>
           <div class="col col-md-auto d-flex justify-content-end order-md-3">
