Стабилизация загрузки событий с методами и без в различных режимах, функция buttonLoader

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <div
               class="card-footer d-flex justify-content-end align-items-center bg-light"
             >
-              <button class="btn btn-primary px-4" id="addTaskToCalBtn">
+              <button class="btn btn-primary" id="addTaskToCalBtn">
                 Добавить
               </button>
             </div>
