--- a/index.html
+++ b/index.html
@@ -931,6 +931,9 @@
             <span class="endApproveDate" style="font-weight: bold"></span>?
             Продолжить?
           </div>
+          <div class="dailyApprove m-auto d-flex flex-row flex-wrap">
+            <!-- Список дат с чекбоксами будет добавлен здесь -->
+          </div>
           <div
             class="card-footer d-flex justify-content-end align-items-center bg-light"
           >
