lockEmployment.ts + decomposition

--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@
             <span class="endLockDate" style="font-weight: bold"></span>?
             Продолжить?
           </div>
-          <div class="dailyLock m-auto d-flex flex-row flex-wrap">
+          <div class="dailyBlockContainer m-auto d-flex flex-row flex-wrap">
             <!-- Список дат с чекбоксами будет добавлен здесь -->
           </div>
           <div
@@ -1020,6 +1020,7 @@
             <span class="endUnlockDate" style="font-weight: bold"></span>?
             Продолжить?
           </div>
+
           <div
             class="card-footer d-flex justify-content-end align-items-center bg-light"
           >
