--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
 
     <script src="vendors/fontawesome/all.min.js" type="module"></script>
     <script src="vendors/list.js/list.min.js" type="module"></script>
-    <script src="assets/js/theme.js" type="module"></script>
+    <script src="assets/js/theme.ts" type="module"></script>
     <script src="vendors/flatpickr/flatpickr.min.js" type="module"></script>
     <script src="vendors/dayjs/dayjs.min.js" type="module"></script>
     <script src="vendors/flatpickr/ru.js" type="module"></script>
