--- a/index.html
+++ b/index.html
@@ -976,6 +976,9 @@
             <span class="endLockDate" style="font-weight: bold"></span>?
             Продолжить?
           </div>
+          <div class="dailyBlockContainer m-auto d-flex flex-row flex-wrap">
+            <!-- Список дат с чекбоксами будет добавлен здесь -->
+          </div>
           <div
             class="card-footer d-flex justify-content-end align-items-center bg-light"
           >
@@ -1016,6 +1019,9 @@
             <span class="startUnlockDate" style="font-weight: bold"></span> по
             <span class="endUnlockDate" style="font-weight: bold"></span>?
             Продолжить?
+          </div>
+          <div class="dailyUnBlockContainer m-auto d-flex flex-row flex-wrap">
+            <!-- Список дат с чекбоксами будет добавлен здесь -->
           </div>
           <div
             class="card-footer d-flex justify-content-end align-items-center bg-light"
