--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-warning"
+              class="btn btn-warning cancel-action"
               data-bs-dismiss="modal"
             >
               Нет
@@ -1035,7 +1035,7 @@
             </button>
             <button
               type="button"
-              class="btn btn-warning"
+              class="btn btn-warning cancel-action"
               data-bs-dismiss="modal"
             >
               Нет
