Корректировка текстов на окнах подтверждения

--- a/index.html
+++ b/index.html
@@ -925,10 +925,7 @@
           </div>
           <div class="modal-body fs-0">
             Вы хотите согласовать занятость сотруднику
-            <span class="userSurname" style="font-weight: bold"></span> в период
-            с
-            <span class="startApproveDate" style="font-weight: bold"></span> по
-            <span class="endApproveDate" style="font-weight: bold"></span>?
+            <span class="userSurname" style="font-weight: bold"></span> в выбранные даты?
             Продолжить?
           </div>
           <div class="dailyApprove m-auto d-flex flex-row flex-wrap">
@@ -967,14 +964,8 @@
             </h5>
           </div>
           <div class="modal-body fs-0">
-            Вы хотите
-            <span class="text-danger"><b>заблокировать</b></span> возможность
-            добавления занятости сотруднику
-            <span class="lockedUserSurname" style="font-weight: bold"></span> в
-            период с
-            <span class="startLockDate" style="font-weight: bold"></span> по
-            <span class="endLockDate" style="font-weight: bold"></span>?
-            Продолжить?
+            <span class="text-danger"><b>Заблокировать</b></span> выбранные даты сотруднику
+            <span class="lockedUserSurname" style="font-weight: bold"></span>?
           </div>
           <div class="dailyBlockContainer m-auto d-flex flex-row flex-wrap">
             <!-- Список дат с чекбоксами будет добавлен здесь -->
@@ -1011,14 +1002,10 @@
             </h5>
           </div>
           <div class="modal-body fs-0">
-            Вы хотите
-            <span class="text-success"><b>разблокировать</b></span> возможность
-            добавления занятости сотруднику
-            <span class="unLockedUserSurname" style="font-weight: bold"></span>
-            в период с
-            <span class="startUnlockDate" style="font-weight: bold"></span> по
-            <span class="endUnlockDate" style="font-weight: bold"></span>?
-            Продолжить?
+
+            <span class="text-success"><b>Разблокировать</b></span> выбранные даты сотруднику
+            <span class="unLockedUserSurname" style="font-weight: bold"></span>?
+
           </div>
           <div class="dailyUnBlockContainer m-auto d-flex flex-row flex-wrap">
             <!-- Список дат с чекбоксами будет добавлен здесь -->
