Типизация editEvent, изменение способа руссификации flatpickr

--- a/index.html
+++ b/index.html
@@ -1076,6 +1076,6 @@
     <script src="assets/js/theme.js" type="module"></script>
     <script src="vendors/flatpickr/flatpickr.min.js" type="module"></script>
     <script src="vendors/dayjs/dayjs.min.js" type="module"></script>
-    <script src="vendors/flatpickr/ru.js" type="module"></script>
+    <!-- <script src="vendors/flatpickr/ru.js" type="module"></script> -->
   </body>
 </html>
